<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/edit_dialog_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textWalletAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="14s299LGRmSX5dxtcuY4gqUgn2tW3nCz8m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/nickname"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextWalletNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:ellipsize="end"
            android:hint="@string/my_favourited_wallet"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textCursorDrawable="@null" />

    </LinearLayout>

</FrameLayout>
