<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/add_dialog_text" />

        <TextView
            android:id="@+id/textAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/textInfo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWalletAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="65dp"
            android:backgroundTint="@color/colorPrimary"
            android:ellipsize="end"
            android:hint="@string/enter_your_address"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toBottomOf="@id/textAddressLabel" />

        <ImageButton
            android:id="@+id/buttonAddClipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/editTextWalletAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextWalletAddress"
            app:layout_constraintTop_toTopOf="@id/editTextWalletAddress"
            app:srcCompat="@drawable/ic_content_paste_white_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


    </LinearLayout>

</FrameLayout>
