<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.detail.DetailFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimarySurface"
                android:fitsSystemWindows="true"
                android:padding="0dp"
                android:stateListAnimator="@null">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:titleEnabled="false">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="1.25">

                        <androidx.constraintlayout.helper.widget.Flow
                            android:id="@+id/flowLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:orientation="vertical"
                            android:paddingStart="24dp"
                            android:paddingEnd="24dp"
                            android:paddingBottom="40dp"
                            app:constraint_referenced_ids="imgDetailsBitcoin, view, textFinalBalanceCrypto, textFinalBalanceMoney, textWalletIDLabel, textWalletID, textTotalReceivedLabel, textTotalReceived, textTotalSentLabel, textTotalSent, textInfo"
                            app:flow_horizontalAlign="start"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imgDetailsBitcoin"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintStart_toStartOf="@id/flowLayout"
                            app:layout_constraintEnd_toEndOf="@id/flowLayout"
                            app:srcCompat="@drawable/bitcoin_logo_2" />

                        <TextView
                            android:id="@+id/textFinalBalanceCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/default_zero_BTC"
                            tools:text="0 BTC"
                            android:textColor="@color/white_a0"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textFinalBalanceMoney"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/default_zero_USD"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            android:textColor="@color/white_a0"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textWalletIDLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/white_a0"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textWalletID"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/white_a0"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:text="14s299LGRmSX5dxtcuY4gqUgn2tW3nCz8m" />


                        <TextView
                            android:id="@+id/textTotalReceivedLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_received"
                            android:textColor="@color/white_a0"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textTotalReceived"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_zero_BTC"
                            android:textColor="@color/white_a0"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textTotalSentLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_sent"
                            android:textColor="@color/white_a0"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textTotalSent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_zero_BTC"
                            android:textColor="@color/white_a0"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Last Updated..."
                            android:textAlignment="center"
                            android:textColor="@color/white_a0"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="1dp" />


                        <ImageView
                            android:id="@+id/imageViewQrCode"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/ic_qr_button"
                            app:layout_constraintBottom_toBottomOf="@id/textTotalSent"
                            app:layout_constraintDimensionRatio="H,1:1"
                            app:layout_constraintRight_toLeftOf="@id/buttonCopyAddressToClipboard"
                            app:layout_constraintTop_toTopOf="@id/textTotalReceivedLabel" />

                        <ImageButton
                            android:id="@+id/buttonCopyAddressToClipboard"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginRight="25dp"
                            android:background="#0000"
                            app:layout_constraintBottom_toBottomOf="@id/textWalletID"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/textWalletID"
                            app:srcCompat="@drawable/ic_content_copy_white_24dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Your toolbar should always below your View otherwise it won't be visible  -->
                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbarResults"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/Theme.MaterialComponents.DayNight"
                        app:titleTextColor="@color/white">

                        <TextView
                            android:id="@+id/newTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_zero_BTC"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:behavior_overlapTop="30dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.cardview.widget.CardView
                    android:id="@+id/detailCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="32dp"
                    android:minHeight="400dp"
                    app:cardBackgroundColor="?android:colorBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        >
                        <!-- A CardView that contains a TextView -->
                        <TextView
                            android:id="@+id/textViewTransactionLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:layout_marginBottom="25dp"
                            android:text="@string/last_transactions"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewNoTransaction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="60dp"
                            android:layout_marginBottom="60dp"
                            android:text="@string/no_transactions_found"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:visibility="gone" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewTransactions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="50dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>